before running on much of data

--- a/process_food_kg.ipynb
+++ b/process_food_kg.ipynb
@@ -9,14 +9,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T01:44:42.460842Z",
-     "start_time": "2025-11-22T01:44:41.487945Z"
+     "end_time": "2025-11-26T08:23:18.877873Z",
+     "start_time": "2025-11-26T08:23:18.868631Z"
     }
    },
    "cell_type": "code",
    "source": [
     "import json\n",
     "import os\n",
+    "import time\n",
     "\n",
     "import pandas as pd\n",
     "from dotenv import load_dotenv\n",
@@ -35,26 +36,26 @@
    ],
    "id": "3bc70ff06c835cc0",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T01:44:55.160011Z",
-     "start_time": "2025-11-22T01:44:42.469334Z"
+     "end_time": "2025-11-26T08:23:31.445977Z",
+     "start_time": "2025-11-26T08:23:18.880682Z"
     }
    },
    "cell_type": "code",
    "source": "df = pd.read_csv(\"data/raw/nourish_public_FoodKG.csv\")",
    "id": "37d2896b9a396a23",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T01:44:55.385706Z",
-     "start_time": "2025-11-22T01:44:55.379790Z"
+     "end_time": "2025-11-26T08:23:31.465426Z",
+     "start_time": "2025-11-26T08:23:31.461042Z"
     }
    },
    "cell_type": "code",
@@ -183,18 +184,36 @@
        "</div>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 9
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Performance:\n",
+    "\n",
+    "model = \"qwen/qwen3-4b-2507\"\n",
+    "* Overlap:   0.8744 (Intersection divided by the size of the larger set)\n",
+    "* Jaccard:   0.8104 (Intersection divided by the size of the union)\n",
+    "* Precision: 0.8834 (Fraction of predicted ingredients that are correct)\n",
+    "* Recall:    0.8756 (Fraction of actual ingredients that were predicted)\n",
+    "* F1:        0.8791 (Harmonic mean of precision and recall)\n",
+    "\n",
+    "\n",
+    "model = \"qwen/qwen3-4b-thinking-2507\"\n",
+    "* Took way too long to even consider"
+   ],
+   "id": "5684fbb63ce4ef6d"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T01:48:12.707958Z",
-     "start_time": "2025-11-22T01:44:55.435642Z"
+     "start_time": "2025-11-26T08:23:31.491155Z"
     }
    },
    "cell_type": "code",
@@ -202,42 +221,29 @@
     "model = \"qwen/qwen3-4b-2507\"\n",
     "# model=\"openai/gpt-oss-20b\",\n",
     "\n",
+    "start_time = time.time()\n",
+    "\n",
     "process_food_kg_df(\n",
     "    df=df,\n",
     "    model=model,\n",
     "    client=client,\n",
     "    restart=True,  # reset the checkpoints\n",
     "    batch_size=100,\n",
-    "    stop_at=1000\n",
-    ")"
+    "    stop_at=100\n",
+    ")\n",
+    "\n",
+    "end_time = time.time()\n",
+    "print(f\"{model} completed in {end_time - start_time:.2f} seconds\")"
    ],
    "id": "73941be59890037",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wrote part_0_99.csv (0:100) — checkpoint=99\n",
-      "Wrote part_100_199.csv (100:200) — checkpoint=199\n",
-      "Wrote part_200_299.csv (200:300) — checkpoint=299\n",
-      "Wrote part_300_399.csv (300:400) — checkpoint=399\n",
-      "Wrote part_400_499.csv (400:500) — checkpoint=499\n",
-      "Wrote part_500_599.csv (500:600) — checkpoint=599\n",
-      "Wrote part_600_699.csv (600:700) — checkpoint=699\n",
-      "Wrote part_700_799.csv (700:800) — checkpoint=799\n",
-      "Wrote part_800_899.csv (800:900) — checkpoint=899\n",
-      "Wrote part_900_999.csv (900:1000) — checkpoint=999\n",
-      "Done.\n"
-     ]
-    }
-   ],
-   "execution_count": 4
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T01:48:12.825096Z",
-     "start_time": "2025-11-22T01:48:12.808147Z"
+     "end_time": "2025-11-26T08:32:44.078476400Z",
+     "start_time": "2025-11-26T08:22:02.847012Z"
     }
    },
    "cell_type": "code",
@@ -249,8 +255,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T01:48:12.833103Z",
-     "start_time": "2025-11-22T01:48:12.830254Z"
+     "end_time": "2025-11-26T08:32:44.078476400Z",
+     "start_time": "2025-11-26T08:22:04.099420Z"
     }
    },
    "cell_type": "code",
@@ -273,7 +279,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T01:48:12.848414Z",
+     "end_time": "2025-11-26T08:32:44.078476400Z",
      "start_time": "2025-11-22T01:48:12.845030Z"
     }
    },
@@ -295,7 +301,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T01:48:12.866319Z",
+     "end_time": "2025-11-26T08:32:44.078476400Z",
      "start_time": "2025-11-22T01:48:12.861894Z"
     }
    },
@@ -403,7 +409,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T01:48:12.899534Z",
+     "end_time": "2025-11-26T08:32:44.078476400Z",
      "start_time": "2025-11-22T01:48:12.893684Z"
     }
    },
@@ -419,7 +425,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T01:48:12.950345Z",
+     "end_time": "2025-11-26T08:32:44.078476400Z",
      "start_time": "2025-11-22T01:48:12.946312Z"
     }
    },
@@ -527,7 +533,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T01:48:13.184289Z",
+     "end_time": "2025-11-26T08:32:44.091061900Z",
      "start_time": "2025-11-22T01:48:13.182155Z"
     }
    },
