--- a/test_food_kg.ipynb
+++ b/test_food_kg.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-22T03:41:32.806851Z",
-     "start_time": "2025-11-22T03:41:32.591841Z"
+     "end_time": "2025-11-26T08:22:33.194780Z",
+     "start_time": "2025-11-26T08:22:32.960946Z"
     }
    },
    "source": [
@@ -22,8 +22,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T03:41:32.812846Z",
-     "start_time": "2025-11-22T03:41:32.810422Z"
+     "end_time": "2025-11-26T08:22:33.200878Z",
+     "start_time": "2025-11-26T08:22:33.198984Z"
     }
    },
    "cell_type": "code",
@@ -41,8 +41,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T03:41:32.831560Z",
-     "start_time": "2025-11-22T03:41:32.817194Z"
+     "end_time": "2025-11-26T08:22:33.233876Z",
+     "start_time": "2025-11-26T08:22:33.207031Z"
     }
    },
    "cell_type": "code",
@@ -166,8 +166,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T03:41:32.863414Z",
-     "start_time": "2025-11-22T03:41:32.856313Z"
+     "end_time": "2025-11-26T08:22:33.269676Z",
+     "start_time": "2025-11-26T08:22:33.262730Z"
     }
    },
    "cell_type": "code",
@@ -196,18 +196,18 @@
        "4   4  ['1 c. peanut butter', '3/4 c. graham cracker ...   \n",
        "\n",
        "                                            pred_set  \\\n",
-       "0  {pecan, butter, shredded rice biscuit, brown s...   \n",
-       "1  {chipped beef, cream of mushroom soup, sour cr...   \n",
-       "2  {salt, pepper, corn, butter, garlic powder, cr...   \n",
-       "3  {cheese, stuffing, mushroom soup, chicken, chi...   \n",
-       "4  {peanut butter, butter, chocolate chip, graham...   \n",
+       "0  {brown sugar, vanilla, shredded rice biscuit, ...   \n",
+       "1  {cream of mushroom soup, sour cream, chicken b...   \n",
+       "2  {cream cheese, garlic powder, salt, corn, butt...   \n",
+       "3  {mushroom soup, chicken, chicken gravy, cheese...   \n",
+       "4  {graham cracker crumb, peanut butter, powdered...   \n",
        "\n",
        "                                            test_set  \n",
-       "0  {pecan, margarine, butter, rice biscuit, brown...  \n",
-       "1  {chipped beef, cream of mushroom soup, sour cr...  \n",
-       "2  {black pepper, salt, corn, butter, garlic powd...  \n",
-       "3  {cheese, stuffing, cream of mushroom soup, who...  \n",
-       "4  {graham cracker, peanut butter, butter, chocol...  "
+       "0  {brown sugar, rice biscuit, vanilla, butter, e...  \n",
+       "1  {cream of mushroom soup, sour cream, chicken b...  \n",
+       "2  {cream cheese, garlic powder, salt, corn, blac...  \n",
+       "3  {whole chicken, cream of mushroom soup, chicke...  \n",
+       "4  {peanut butter, powdered sugar, butter, graham...  "
       ],
       "text/html": [
        "<div>\n",
@@ -239,36 +239,36 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>['1 c. firmly packed brown sugar', '1/2 c. eva...</td>\n",
-       "      <td>{pecan, butter, shredded rice biscuit, brown s...</td>\n",
-       "      <td>{pecan, margarine, butter, rice biscuit, brown...</td>\n",
+       "      <td>{brown sugar, vanilla, shredded rice biscuit, ...</td>\n",
+       "      <td>{brown sugar, rice biscuit, vanilla, butter, e...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>['1 small jar chipped beef, cut up', '4 boned ...</td>\n",
-       "      <td>{chipped beef, cream of mushroom soup, sour cr...</td>\n",
-       "      <td>{chipped beef, cream of mushroom soup, sour cr...</td>\n",
+       "      <td>{cream of mushroom soup, sour cream, chicken b...</td>\n",
+       "      <td>{cream of mushroom soup, sour cream, chicken b...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>['2 (16 oz.) pkg. frozen corn', '1 (8 oz.) pkg...</td>\n",
-       "      <td>{salt, pepper, corn, butter, garlic powder, cr...</td>\n",
-       "      <td>{black pepper, salt, corn, butter, garlic powd...</td>\n",
+       "      <td>{cream cheese, garlic powder, salt, corn, butt...</td>\n",
+       "      <td>{cream cheese, garlic powder, salt, corn, blac...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>['1 large whole chicken', '2 (10 1/2 oz.) cans...</td>\n",
-       "      <td>{cheese, stuffing, mushroom soup, chicken, chi...</td>\n",
-       "      <td>{cheese, stuffing, cream of mushroom soup, who...</td>\n",
+       "      <td>{mushroom soup, chicken, chicken gravy, cheese...</td>\n",
+       "      <td>{whole chicken, cream of mushroom soup, chicke...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>['1 c. peanut butter', '3/4 c. graham cracker ...</td>\n",
-       "      <td>{peanut butter, butter, chocolate chip, graham...</td>\n",
-       "      <td>{graham cracker, peanut butter, butter, chocol...</td>\n",
+       "      <td>{graham cracker crumb, peanut butter, powdered...</td>\n",
+       "      <td>{peanut butter, powdered sugar, butter, graham...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -285,8 +285,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T03:41:32.954574Z",
-     "start_time": "2025-11-22T03:41:32.951941Z"
+     "end_time": "2025-11-26T08:22:33.344837Z",
+     "start_time": "2025-11-26T08:22:33.342194Z"
     }
    },
    "cell_type": "code",
@@ -326,8 +326,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T03:41:32.984833Z",
-     "start_time": "2025-11-22T03:41:32.973043Z"
+     "end_time": "2025-11-26T08:22:33.381834Z",
+     "start_time": "2025-11-26T08:22:33.369442Z"
     }
    },
    "cell_type": "code",
@@ -357,8 +357,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T03:41:33.001161Z",
-     "start_time": "2025-11-22T03:41:32.989357Z"
+     "end_time": "2025-11-26T08:22:33.395188Z",
+     "start_time": "2025-11-26T08:22:33.385642Z"
     }
    },
    "cell_type": "code",
@@ -382,43 +382,43 @@
        "99  99  ['1 box yellow cake mix', '2 eggs', '1/3 c. so...   \n",
        "\n",
        "                                             pred_set  \\\n",
-       "0   {pecan, butter, shredded rice biscuit, brown s...   \n",
-       "1   {chipped beef, cream of mushroom soup, sour cr...   \n",
-       "2   {salt, pepper, corn, butter, garlic powder, cr...   \n",
-       "3   {cheese, stuffing, mushroom soup, chicken, chi...   \n",
-       "4   {peanut butter, butter, chocolate chip, graham...   \n",
+       "0   {brown sugar, vanilla, shredded rice biscuit, ...   \n",
+       "1   {cream of mushroom soup, sour cream, chicken b...   \n",
+       "2   {cream cheese, garlic powder, salt, corn, butt...   \n",
+       "3   {mushroom soup, chicken, chicken gravy, cheese...   \n",
+       "4   {graham cracker crumb, peanut butter, powdered...   \n",
        "..                                                ...   \n",
-       "95  {onion, salt, catsup, black pepper, bell peppe...   \n",
-       "96  {onion, cornstarch, ginger, catsup, soy sauce,...   \n",
-       "97  {pecan, orange juice, orange, sugar, cherry, c...   \n",
-       "98                        {sugar, peanut butter, egg}   \n",
-       "99  {bit, pecan, soft margarine, yellow cake mix, ...   \n",
+       "95  {brown sugar, pork and beans, oil, salt, black...   \n",
+       "96  {brown sugar, ginger, water, green pepper, pin...   \n",
+       "97  {sugar, coconut, pecan, orange, orange juice, ...   \n",
+       "98                        {sugar, egg, peanut butter}   \n",
+       "99  {yellow cake mix, bit, egg, soft margarine, mi...   \n",
        "\n",
        "                                             test_set  \\\n",
-       "0   {pecan, margarine, butter, rice biscuit, brown...   \n",
-       "1   {chipped beef, cream of mushroom soup, sour cr...   \n",
-       "2   {black pepper, salt, corn, butter, garlic powd...   \n",
-       "3   {cheese, stuffing, cream of mushroom soup, who...   \n",
-       "4   {graham cracker, peanut butter, butter, chocol...   \n",
+       "0   {brown sugar, rice biscuit, vanilla, butter, e...   \n",
+       "1   {cream of mushroom soup, sour cream, chicken b...   \n",
+       "2   {cream cheese, garlic powder, salt, corn, blac...   \n",
+       "3   {whole chicken, cream of mushroom soup, chicke...   \n",
+       "4   {peanut butter, powdered sugar, butter, graham...   \n",
        "..                                                ...   \n",
-       "95  {onion, salt, catsup, black pepper, bell peppe...   \n",
-       "96  {onion, cornstarch, ginger, catsup, soy sauce,...   \n",
-       "97  {pecan, orange juice, orange, sugar, cherry, c...   \n",
-       "98                        {sugar, peanut butter, egg}   \n",
-       "99  {pecan, margarine, toffee bit, yellow cake mix...   \n",
+       "95  {brown sugar, pork and beans, oil, salt, black...   \n",
+       "96  {brown sugar, ginger, water, green pepper, pin...   \n",
+       "97  {sugar, coconut, pecan, orange, orange juice, ...   \n",
+       "98                        {sugar, egg, peanut butter}   \n",
+       "99  {toffee bit, yellow cake mix, egg, milk, marga...   \n",
        "\n",
        "                   pred_only                                test_only  \\\n",
        "0    {shredded rice biscuit}                {margarine, rice biscuit}   \n",
        "1                         {}                                       {}   \n",
        "2                   {pepper}                           {black pepper}   \n",
-       "3   {mushroom soup, chicken}  {cream of mushroom soup, whole chicken}   \n",
+       "3   {mushroom soup, chicken}  {whole chicken, cream of mushroom soup}   \n",
        "4     {graham cracker crumb}                         {graham cracker}   \n",
        "..                       ...                                      ...   \n",
        "95                        {}                                       {}   \n",
        "96                        {}                                       {}   \n",
        "97                        {}                                       {}   \n",
        "98                        {}                                       {}   \n",
-       "99     {soft margarine, bit}                  {margarine, toffee bit}   \n",
+       "99     {bit, soft margarine}                  {toffee bit, margarine}   \n",
        "\n",
        "    intersection_size  union_size   overlap   jaccard  precision    recall  \\\n",
        "0                   5           8  0.714286  0.625000   0.833333  0.714286   \n",
@@ -487,8 +487,8 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>['1 c. firmly packed brown sugar', '1/2 c. eva...</td>\n",
-       "      <td>{pecan, butter, shredded rice biscuit, brown s...</td>\n",
-       "      <td>{pecan, margarine, butter, rice biscuit, brown...</td>\n",
+       "      <td>{brown sugar, vanilla, shredded rice biscuit, ...</td>\n",
+       "      <td>{brown sugar, rice biscuit, vanilla, butter, e...</td>\n",
        "      <td>{shredded rice biscuit}</td>\n",
        "      <td>{margarine, rice biscuit}</td>\n",
        "      <td>5</td>\n",
@@ -503,8 +503,8 @@
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>['1 small jar chipped beef, cut up', '4 boned ...</td>\n",
-       "      <td>{chipped beef, cream of mushroom soup, sour cr...</td>\n",
-       "      <td>{chipped beef, cream of mushroom soup, sour cr...</td>\n",
+       "      <td>{cream of mushroom soup, sour cream, chicken b...</td>\n",
+       "      <td>{cream of mushroom soup, sour cream, chicken b...</td>\n",
        "      <td>{}</td>\n",
        "      <td>{}</td>\n",
        "      <td>4</td>\n",
@@ -519,8 +519,8 @@
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>['2 (16 oz.) pkg. frozen corn', '1 (8 oz.) pkg...</td>\n",
-       "      <td>{salt, pepper, corn, butter, garlic powder, cr...</td>\n",
-       "      <td>{black pepper, salt, corn, butter, garlic powd...</td>\n",
+       "      <td>{cream cheese, garlic powder, salt, corn, butt...</td>\n",
+       "      <td>{cream cheese, garlic powder, salt, corn, blac...</td>\n",
        "      <td>{pepper}</td>\n",
        "      <td>{black pepper}</td>\n",
        "      <td>5</td>\n",
@@ -535,10 +535,10 @@
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>['1 large whole chicken', '2 (10 1/2 oz.) cans...</td>\n",
-       "      <td>{cheese, stuffing, mushroom soup, chicken, chi...</td>\n",
-       "      <td>{cheese, stuffing, cream of mushroom soup, who...</td>\n",
+       "      <td>{mushroom soup, chicken, chicken gravy, cheese...</td>\n",
+       "      <td>{whole chicken, cream of mushroom soup, chicke...</td>\n",
        "      <td>{mushroom soup, chicken}</td>\n",
-       "      <td>{cream of mushroom soup, whole chicken}</td>\n",
+       "      <td>{whole chicken, cream of mushroom soup}</td>\n",
        "      <td>3</td>\n",
        "      <td>7</td>\n",
        "      <td>0.600000</td>\n",
@@ -551,8 +551,8 @@
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>['1 c. peanut butter', '3/4 c. graham cracker ...</td>\n",
-       "      <td>{peanut butter, butter, chocolate chip, graham...</td>\n",
-       "      <td>{graham cracker, peanut butter, butter, chocol...</td>\n",
+       "      <td>{graham cracker crumb, peanut butter, powdered...</td>\n",
+       "      <td>{peanut butter, powdered sugar, butter, graham...</td>\n",
        "      <td>{graham cracker crumb}</td>\n",
        "      <td>{graham cracker}</td>\n",
        "      <td>4</td>\n",
@@ -583,8 +583,8 @@
        "      <th>95</th>\n",
        "      <td>95</td>\n",
        "      <td>['3 (1 lb.) cans pork and beans', '1/2 c. bell...</td>\n",
-       "      <td>{onion, salt, catsup, black pepper, bell peppe...</td>\n",
-       "      <td>{onion, salt, catsup, black pepper, bell peppe...</td>\n",
+       "      <td>{brown sugar, pork and beans, oil, salt, black...</td>\n",
+       "      <td>{brown sugar, pork and beans, oil, salt, black...</td>\n",
        "      <td>{}</td>\n",
        "      <td>{}</td>\n",
        "      <td>9</td>\n",
@@ -599,8 +599,8 @@
        "      <th>96</th>\n",
        "      <td>96</td>\n",
        "      <td>['2 c. diced cooked chicken', '2 Tbsp. shorten...</td>\n",
-       "      <td>{onion, cornstarch, ginger, catsup, soy sauce,...</td>\n",
-       "      <td>{onion, cornstarch, ginger, catsup, soy sauce,...</td>\n",
+       "      <td>{brown sugar, ginger, water, green pepper, pin...</td>\n",
+       "      <td>{brown sugar, ginger, water, green pepper, pin...</td>\n",
        "      <td>{}</td>\n",
        "      <td>{}</td>\n",
        "      <td>14</td>\n",
@@ -615,8 +615,8 @@
        "      <th>97</th>\n",
        "      <td>97</td>\n",
        "      <td>['8 to 10 juicy oranges, peeled and diced', '1...</td>\n",
-       "      <td>{pecan, orange juice, orange, sugar, cherry, c...</td>\n",
-       "      <td>{pecan, orange juice, orange, sugar, cherry, c...</td>\n",
+       "      <td>{sugar, coconut, pecan, orange, orange juice, ...</td>\n",
+       "      <td>{sugar, coconut, pecan, orange, orange juice, ...</td>\n",
        "      <td>{}</td>\n",
        "      <td>{}</td>\n",
        "      <td>6</td>\n",
@@ -631,8 +631,8 @@
        "      <th>98</th>\n",
        "      <td>98</td>\n",
        "      <td>['1 c. creamy peanut butter', '1 c. sugar', '1...</td>\n",
-       "      <td>{sugar, peanut butter, egg}</td>\n",
-       "      <td>{sugar, peanut butter, egg}</td>\n",
+       "      <td>{sugar, egg, peanut butter}</td>\n",
+       "      <td>{sugar, egg, peanut butter}</td>\n",
        "      <td>{}</td>\n",
        "      <td>{}</td>\n",
        "      <td>3</td>\n",
@@ -647,10 +647,10 @@
        "      <th>99</th>\n",
        "      <td>99</td>\n",
        "      <td>['1 box yellow cake mix', '2 eggs', '1/3 c. so...</td>\n",
-       "      <td>{bit, pecan, soft margarine, yellow cake mix, ...</td>\n",
-       "      <td>{pecan, margarine, toffee bit, yellow cake mix...</td>\n",
-       "      <td>{soft margarine, bit}</td>\n",
-       "      <td>{margarine, toffee bit}</td>\n",
+       "      <td>{yellow cake mix, bit, egg, soft margarine, mi...</td>\n",
+       "      <td>{toffee bit, yellow cake mix, egg, milk, marga...</td>\n",
+       "      <td>{bit, soft margarine}</td>\n",
+       "      <td>{toffee bit, margarine}</td>\n",
        "      <td>4</td>\n",
        "      <td>8</td>\n",
        "      <td>0.666667</td>\n",
@@ -675,8 +675,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T03:41:42.563168Z",
-     "start_time": "2025-11-22T03:41:42.559574Z"
+     "end_time": "2025-11-26T08:22:33.715926Z",
+     "start_time": "2025-11-26T08:22:33.713525Z"
     }
    },
    "cell_type": "code",
@@ -701,13 +701,13 @@
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T03:41:33.089720Z",
-     "start_time": "2025-11-22T03:41:33.088545Z"
+     "end_time": "2025-11-26T08:22:33.756386Z",
+     "start_time": "2025-11-26T08:22:33.755216Z"
     }
    },
    "cell_type": "code",
