--- a/process_food_kg.ipynb
+++ b/process_food_kg.ipynb
@@ -7,12 +7,7 @@
    "id": "5bcd2d4a58af6727"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-26T08:23:18.877873Z",
-     "start_time": "2025-11-26T08:23:18.868631Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "import json\n",
@@ -31,31 +26,27 @@
     "\n",
     "client = OpenAI(\n",
     "    base_url=\"http://localhost:1234/v1\",  # local model\n",
-    "    api_key=api_key\n",
+    "    api_key=api_key,\n",
+    "    timeout=600,\n",
     ")\n"
    ],
    "id": "3bc70ff06c835cc0",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-26T08:23:31.445977Z",
-     "start_time": "2025-11-26T08:23:18.880682Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": "df = pd.read_csv(\"data/raw/nourish_public_FoodKG.csv\")",
    "id": "37d2896b9a396a23",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-26T08:23:31.465426Z",
-     "start_time": "2025-11-26T08:23:31.461042Z"
+     "end_time": "2025-11-26T17:31:35.992966Z",
+     "start_time": "2025-11-26T17:31:35.986553Z"
     }
    },
    "cell_type": "code",
@@ -184,12 +175,12 @@
        "</div>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 9
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -211,11 +202,7 @@
    "id": "5684fbb63ce4ef6d"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2025-11-26T08:23:31.491155Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "model = \"qwen/qwen3-4b-2507\"\n",
@@ -227,9 +214,9 @@
     "    df=df,\n",
     "    model=model,\n",
     "    client=client,\n",
-    "    restart=True,  # reset the checkpoints\n",
-    "    batch_size=100,\n",
-    "    stop_at=100\n",
+    "    # restart=True,  # reset the checkpoints\n",
+    "    batch_size=1000,\n",
+    "    # stop_at=100\n",
     ")\n",
     "\n",
     "end_time = time.time()\n",
@@ -240,23 +227,34 @@
    "execution_count": null
   },
   {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "end_time = time.time()\n",
+    "print(f\"{model} completed in {end_time - start_time:.2f} seconds\")"
+   ],
+   "id": "6e26f5396e49dd03",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-26T08:32:44.078476400Z",
-     "start_time": "2025-11-26T08:22:02.847012Z"
+     "end_time": "2025-11-26T17:31:41.137621Z",
+     "start_time": "2025-11-26T17:31:40.832638Z"
     }
    },
    "cell_type": "code",
    "source": "final_df = assemble_food_kg_df()",
    "id": "2180e8350bbc873",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-26T08:32:44.078476400Z",
-     "start_time": "2025-11-26T08:22:04.099420Z"
+     "end_time": "2025-11-26T17:31:43.067964Z",
+     "start_time": "2025-11-26T17:31:43.065175Z"
     }
    },
    "cell_type": "code",
@@ -266,21 +264,21 @@
     {
      "data": {
       "text/plain": [
-       "1000"
+       "72000"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 6
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-26T08:32:44.078476400Z",
-     "start_time": "2025-11-22T01:48:12.845030Z"
+     "end_time": "2025-11-26T17:31:45.126744Z",
+     "start_time": "2025-11-26T17:31:45.090805Z"
     }
    },
    "cell_type": "code",
@@ -296,13 +294,13 @@
    ],
    "id": "32402a8e1820fcca",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-26T08:32:44.078476400Z",
-     "start_time": "2025-11-22T01:48:12.861894Z"
+     "end_time": "2025-11-26T17:31:45.613885Z",
+     "start_time": "2025-11-26T17:31:45.609661Z"
     }
    },
    "cell_type": "code",
@@ -399,18 +397,18 @@
        "</div>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 8
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-26T08:32:44.078476400Z",
-     "start_time": "2025-11-22T01:48:12.893684Z"
+     "end_time": "2025-11-26T17:31:48.403604Z",
+     "start_time": "2025-11-26T17:31:48.264549Z"
     }
    },
    "cell_type": "code",
@@ -420,13 +418,13 @@
    ],
    "id": "eb5333d7ca02f839",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-26T08:32:44.078476400Z",
-     "start_time": "2025-11-22T01:48:12.946312Z"
+     "end_time": "2025-11-26T17:31:48.987792Z",
+     "start_time": "2025-11-26T17:31:48.983657Z"
     }
    },
    "cell_type": "code",
@@ -523,20 +521,15 @@
        "</div>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 10
+   "execution_count": 9
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-26T08:32:44.091061900Z",
-     "start_time": "2025-11-22T01:48:13.182155Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": "",
    "id": "156f23477302dc83",
