calculate token count

--- a/SpacyProcessing/spacy_unique_ingredients.ipynb
+++ b/SpacyProcessing/spacy_unique_ingredients.ipynb
@@ -6,24 +6,24 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-12-03T00:49:03.591134Z",
-     "start_time": "2025-12-03T00:49:03.318590Z"
+     "end_time": "2025-12-03T01:01:14.415212Z",
+     "start_time": "2025-12-03T01:01:14.413098Z"
     }
    },
    "source": [
     "import ast\n",
-    "import json\n",
     "\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import spacy"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-03T00:49:18.827151Z",
-     "start_time": "2025-12-03T00:49:14.588478Z"
+     "end_time": "2025-12-03T01:01:18.786305Z",
+     "start_time": "2025-12-03T01:01:14.426692Z"
     }
    },
    "cell_type": "code",
@@ -110,18 +110,18 @@
        "</div>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-03T00:50:52.899731Z",
-     "start_time": "2025-12-03T00:50:32.131122Z"
+     "end_time": "2025-12-03T01:01:39.992439Z",
+     "start_time": "2025-12-03T01:01:18.885151Z"
     }
    },
    "cell_type": "code",
@@ -145,18 +145,18 @@
        "Name: ingredients_list, dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-03T00:51:32.943210Z",
-     "start_time": "2025-12-03T00:51:31.862233Z"
+     "end_time": "2025-12-03T01:01:41.130345Z",
+     "start_time": "2025-12-03T01:01:40.040854Z"
     }
    },
    "cell_type": "code",
@@ -170,13 +170,13 @@
    ],
    "id": "79030791909443d6",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-03T00:51:37.055876Z",
-     "start_time": "2025-12-03T00:51:37.025571Z"
+     "end_time": "2025-12-03T01:01:41.270967Z",
+     "start_time": "2025-12-03T01:01:41.254984Z"
     }
    },
    "cell_type": "code",
@@ -197,18 +197,60 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 7
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Calculate rought number of tokens of ingredients",
+   "id": "c2026aadd0e7a61c"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-29T07:01:29.668965Z",
-     "start_time": "2025-11-29T07:01:29.667702Z"
+     "end_time": "2025-12-03T01:03:11.429454Z",
+     "start_time": "2025-12-03T01:01:41.279996Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "nlp = spacy.load(\"en_core_web_sm\", disable=[\"parser\", \"ner\", \"tagger\"])\n",
+    "total_tokens = 0\n",
+    "for doc in nlp.pipe(unique_ingredients, batch_size=1000):\n",
+    "    total_tokens += len(doc)\n",
+    "\n",
+    "print(f\"Approximate total token count: {total_tokens:,}\")"
+   ],
+   "id": "ac669aa8eefea39a",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/anaconda3/envs/food-knowledge-graph/lib/python3.13/site-packages/spacy/pipeline/lemmatizer.py:188: UserWarning: [W108] The rule-based lemmatizer did not find POS annotation for one or more tokens. Check that your pipeline includes components that assign token.pos, typically 'tagger'+'attribute_ruler' or 'morphologizer'.\n",
+      "  warnings.warn(Warnings.W108)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Approximate total token count: 1,249,649\n"
+     ]
+    }
+   ],
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-03T01:03:11.575766Z",
+     "start_time": "2025-12-03T01:03:11.574595Z"
     }
    },
    "cell_type": "code",
    "source": "",
-   "id": "6e1ae8212249ee66",
+   "id": "cedcdfd7ed48bb6c",
    "outputs": [],
    "execution_count": null
   }
