before trying openai

--- a/process_food_branded_experimental.ipynb
+++ b/process_food_branded_experimental.ipynb
@@ -12,13 +12,14 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-29T07:28:51.398636Z",
-     "start_time": "2025-11-29T07:28:51.389090Z"
+     "end_time": "2025-12-03T03:57:08.324712Z",
+     "start_time": "2025-12-03T03:57:07.751537Z"
     }
    },
    "source": [
     "import json\n",
     "import os\n",
+    "import time\n",
     "\n",
     "import pandas as pd\n",
     "from dotenv import load_dotenv\n",
@@ -31,31 +32,31 @@
     "from openai import OpenAI\n",
     "\n",
     "client = OpenAI(\n",
-    "    base_url=\"http://localhost:1234/v1\",  # local model\n",
+    "    # base_url=\"http://localhost:1234/v1\",  # local model\n",
     "    api_key=api_key\n",
     ")"
    ],
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-29T07:28:51.922199Z",
-     "start_time": "2025-11-29T07:28:51.402028Z"
+     "end_time": "2025-12-03T03:58:08.758203Z",
+     "start_time": "2025-12-03T03:58:08.204985Z"
     }
    },
    "cell_type": "code",
    "source": "df = pd.read_csv(\"data/raw/usda_2022_food_branded_experimental_DESCRIPTION_ONLY.csv\")",
    "id": "e9a0b822a43439df",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-29T07:28:51.930514Z",
-     "start_time": "2025-11-29T07:28:51.926977Z"
+     "end_time": "2025-12-03T03:58:09.377417Z",
+     "start_time": "2025-12-03T03:58:09.370732Z"
     }
    },
    "cell_type": "code",
@@ -126,12 +127,12 @@
        "</div>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 7
+   "execution_count": 3
   },
   {
    "metadata": {
@@ -142,16 +143,20 @@
    },
    "cell_type": "code",
    "source": [
-    "model = \"qwen/qwen3-4b-2507\"\n",
+    "model = \"gpt-5-nano-2025-08-07\"\n",
+    "# model = \"qwen/qwen3-4b-2507\"\n",
     "# model=\"openai/gpt-oss-20b\",\n",
+    "start = time.time()\n",
     "process_branded_food_experimental_df(\n",
     "    df=df,\n",
-    "    model=\"qwen/qwen3-4b-2507\",\n",
+    "    model=model,\n",
     "    client=client,\n",
     "    restart=True,\n",
     "    batch_size=100,\n",
-    "    # stop_at=1000,\n",
-    ")"
+    "    stop_at=1000,\n",
+    ")\n",
+    "end = time.time()\n",
+    "print(f\"Total time elapsed: {end - start:.4f} seconds\")"
    ],
    "id": "80690d7c926fbade",
    "outputs": [
