--- a/unique_ingredients.ipynb
+++ b/unique_ingredients.ipynb
@@ -100,10 +100,10 @@
    "cell_type": "code",
    "source": [
     "# Save to a text file, one ingredient per line\n",
-    "with open(\"checkpoints/unique_ingredients.txt\", \"w\", encoding=\"utf-8\") as f:\n",
+    "with open(\"checkpoints/qwen_unique_ingredients.txt\", \"w\", encoding=\"utf-8\") as f:\n",
     "    f.write(\"\\n\".join(unique_ingredients))\n",
     "\n",
-    "print(f\"Saved {len(unique_ingredients)} unique ingredients to unique_ingredients.txt\")"
+    "print(f\"Saved {len(unique_ingredients)} unique ingredients to qwen_unique_ingredients.txt\")"
    ],
    "id": "ec10d4f76bbcbe57",
    "outputs": [
